# LaiNES

./: .gitignore  CMakeLists.txt  premake5.lua  update_project.bat  update_project.sh
lib/include/: blargg_common.h
lib/include/boost/: cstdint.hpp
src/: config.cpp  menu.cpp
src/include/porting/: directory.hpp
src/porting/unix/: directory.cpp
src/porting/windows/: directory.cpp
